[KColorSchemeWatcher] Fix reading XDG preference

There's an inner variant here that we need to unpack

Amends 91c23a57f39103201d305480eb24039942a376ad

BUG: 497790